[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "graphe-map"
version = "0.1.0"
description = "Système de transport Kinshasa"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
networkx = "3.1"
numpy = "1.24.3"
gunicorn = "20.1.0"

[tool.poetry.scripts]
app = "app:app"
